resources.yml
# see https://kubernetes.io/docs/concepts/services-networking/ingress/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#ingress-v1-networking-k8s-io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-hello
spec:
  rules:
    # NB due to the external-dns controller this will automatically configure the external DNS server (installed
    #    in the pandora box) based on this ingress rule.
    #    see https://github.com/kubernetes-incubator/external-dns
    # NB you can use any other host, but you have to make sure DNS resolves to one of k8s cluster IP addresses.
    # NB you could also use xip.io to make rancher automatically generate a host alike kubernetes-hello.default.10.1.0.3.xip.io.
    # NB you can see the configured server names on the nginx ingress with:
    #       kubectl --namespace ingress-nginx exec $(kubectl --namespace ingress-nginx get pods -l app=ingress-nginx -o name) cat /etc/nginx/nginx.conf | grep 'server_name '
    - host: kubernetes-hello.rancher.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-hello
                port:
                  name: http
---
# see https://kubernetes.io/docs/concepts/services-networking/service/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#service-v1-core
# see https://github.com/kubernetes-incubator/external-dns/blob/v0.5.16/docs/initial-design.md
# see https://github.com/kubernetes-incubator/external-dns/blob/v0.5.16/docs/ttl.md
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-hello
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kubernetes-hello-lb.rancher.test
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  selector:
    app: kubernetes-hello
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
# see https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
# see https://kubernetes.io/docs/concepts/storage/projected-volumes/#serviceaccounttoken
# see https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#daemonset-v1-apps
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#podtemplatespec-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#container-v1-core
# see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#serviceaccounttokenprojection-v1-core
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubernetes-hello
spec:
  selector:
    matchLabels:
      app: kubernetes-hello
  template:
    metadata:
      labels:
        app: kubernetes-hello
    spec:
      serviceAccountName: kubernetes-hello
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      securityContext:
        # NB this group id has to be the same as the container user group id(s)
        #    securityContext, which is inferred by k8s from the USER Dockerfile
        #    instruction.
        fsGroup: 65534
      containers:
        - name: kubernetes-hello
          image: ruilopes/kubernetes-hello
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              memory: 20Mi
              cpu: '0.1'
            limits:
              memory: 20Mi
              cpu: '0.1'
          volumeMounts:
            - name: tokens
              readOnly: true
              mountPath: /var/run/secrets/tokens
            - name: secrets
              readOnly: true
              mountPath: /var/run/secrets/example
            - name: configs
              readOnly: true
              mountPath: /var/run/configs/example
      volumes:
        - name: tokens
          projected:
            sources:
              - serviceAccountToken:
                  path: example.com-jwt.txt
                  audience: example.com
                  # NB the kubelet will periodically rotate this token.
                  # NB the token is rotated when its older than 80% of its time
                  #    to live or if the token is older than 24h.
                  # NB in production, set to a higher value (e.g. 3600 (1h)).
                  # NB the minimum allowed value is 600 (10m).
                  # NB this is equivalent of using the TokenRequest API.
                  #    see https://kubernetes.io/docs/reference/kubernetes-api/authentication-resources/token-request-v1/
                  # NB this is equivalent of executing:
                  #       kubectl create token kubernetes-hello --audience example.com --duration 600s
                  #    see https://kubernetes.io/docs/reference/kubectl/generated/kubectl_create/kubectl_create_token/
                  expirationSeconds: 600
        - name: secrets
          secret:
            secretName: kubernetes-hello-secrets
            defaultMode: 0440
        - name: configs
          configMap:
            name: kubernetes-hello-configs
            defaultMode: 0440
